# SoftRenderer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  优化待办清单.md  更新日志.md  额外功能.md
GPU/: VAO.cpp  VAO.h  buffer_object.cpp  buffer_object.h  clipper.cpp  clipper.h  data_structures.h  frame_buffer.cpp  frame_buffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h  shader.cpp  shader.h  texture.h
GPU/shader/: default_shader.cpp  default_shader.h  texture_shader.h
MAI_SGL/: CMakeLists.txt  base.h  data_structures.h
MAI_SGL/core/: gpu.cpp  gpu.h  gpu_debug.cpp  gpu_debug.h  gpu_profiler.h  gpu_stats.cpp  gpu_stats.h  render_state.h
MAI_SGL/math/: math_functions.h  matrix.h  matrix_functions.h  vector.h
MAI_SGL/pipeline/: clipper.cpp  clipper.h  draw_context.h  draw_pipeline.cpp  draw_pipeline.h  fragment_stage.cpp  fragment_stage.h  primitive_stage.cpp  primitive_stage.h  raster.cpp  raster.h  vertex_stage.cpp  vertex_stage.h
MAI_SGL/resource/: VAO.cpp  VAO.h  buffer_object.cpp  buffer_object.h  frame_buffer.h  image.cpp  image.h  texture.cpp  texture.h
MAI_SGL/shader/: color_shader.cpp  color_shader.h  color_shader_2D.cpp  color_shader_2D.h  default_shader.cpp  shader.cpp  (+6 more)
MAIframework/: geometry.cpp  geometry.h
application/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  image.cpp  image.h
global/: base.h
math/: math.h  math_functions.h  matrix.h  matrix_functions.h  vector.h  vector_functions.h
ui/: CMakeLists.txt  imgui_impl_MAI_SGL.cpp  imgui_impl_MAI_SGL.h  imgui_impl_soft_renderer.cpp  imgui_layer.cpp  imgui_layer.h
(+7 files in other folders)
